objects/ssot__CourseOfferingPtcpResult__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CourseOfferingParticipantId__c</fullName>
        <label>Course Offering Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUnit__c</fullName>
        <label>Duration Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EvaluatorContactId__c</fullName>
        <label>Evaluator Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Course Offering Participant Result Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LetterGradeCode__c</fullName>
        <label>Letter Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NumericGradeNumber__c</fullName>
        <label>Numeric Grade</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantResultStatus__c</fullName>
        <label>Participant Result Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnitsEarnedNumber__c</fullName>
        <label>Units Earned</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719820264228_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfferingPtcpResult_CourseOffer_rel</label>
        <referenceTo>ssot__CourseOfferingParticipant__dlm</referenceTo>
        <relationshipLabel>CourseOfferingPtcpResult_CourseOffer_rel</relationshipLabel>
        <relationshipName>rel_1719820264228_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291149849_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfferingPtcpResult_EvaluatorCo_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>CourseOfferingPtcpResult_EvaluatorCo_rel</relationshipLabel>
        <relationshipName>rel_1720291149849_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>